force-app/main/default/objects/PBS_AB_Code__c/PBS_AB_Code__c.object-meta.xml
<CustomObject>
    <description>PBS A/B Codes Object</description>
    <label>PBS AB Code</label>
    <nameField>
        <displayFormat>PBSABCode-{0000000000}</displayFormat>
        <label>PBS AB Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PBS AB Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>