force-app/main/default/objects/PBS_AB_Code__c/fields/AB_Code__c.field-meta.xml
<CustomField>
    <fullName>AB_Code__c</fullName>
    <description>This field is the 4-digit code that uniquely identifies the agency bureau for which the exception, exemption, administrative, or agency (including trust fund agency) adjustment was created.</description>
    <externalId>true</externalId>
    <label>AB Code</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>