force-app/main/default/objects/PBS_AB_Code__c/fields/Agency_Bureau_Name__c.field-meta.xml
<CustomField>
    <fullName>Agency_Bureau_Name__c</fullName>
    <description>The full name of the agency or bureau.</description>
    <label>Agency Bureau Name</label>
    <length>55</length>
    <type>Text</type>
</CustomField>