force-app/main/default/objects/PBS_AB_Code__c/fields/Agency_Bureau_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Agency_Bureau_Short_Name__c</fullName>
    <description>The 20-character agency bureau short name.</description>
    <label>Agency Bureau Short Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>