force-app/main/default/objects/PBS_AB_Code__c/fields/Agency_Code__c.field-meta.xml
<CustomField>
    <fullName>Agency_Code__c</fullName>
    <description>The first 2-digits of the A/B Code identifies the client agency.</description>
    <label>Agency Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>