force-app/main/default/objects/PBS_AB_Code__c/fields/Source_Created_Ts__c.field-meta.xml
<CustomField>
    <fullName>Source_Created_Ts__c</fullName>
    <description>The date the record was first added to the database. This field is system generated and cannot be updated on-line.</description>
    <label>Source Created Date</label>
    <type>DateTime</type>
</CustomField>