force-app/main/default/objects/PBS_AB_Code__c/fields/Source_Updated_By__c.field-meta.xml
<CustomField>
    <fullName>Source_Updated_By__c</fullName>
    <description>The user id or ticket number that inserted or last updated the record.</description>
    <label>Source Updated By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>