force-app/main/default/objects/PBS_AB_Code__c/fields/Source_Updated_Ts__c.field-meta.xml
<CustomField>
    <fullName>Source_Updated_Ts__c</fullName>
    <description>The date and time the record was last updated or created.</description>
    <label>Source Updated Ts</label>
    <type>DateTime</type>
</CustomField>